fix: bugs